[gd_scene load_steps=16 format=3 uid="uid://cwo5746e5mupu"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_q8bae"]
[ext_resource type="PackedScene" uid="uid://ck84kbksaekej" path="res://Prefabs/shadow.tscn" id="3_sjc8j"]
[ext_resource type="AudioStream" uid="uid://bcik4rc01fcci" path="res://Audio/toy-button-105724.mp3" id="5_e45bu"]
[ext_resource type="Texture2D" uid="uid://bpusdiymnam21" path="res://Textures/Red_Block_off.png" id="6_w27wk"]
[ext_resource type="PackedScene" uid="uid://26iukv1in8qc" path="res://Prefabs/controller_icon.tscn" id="14_76q02"]
[ext_resource type="Texture2D" uid="uid://bgbyxhnwaq2w6" path="res://Textures/FaelynIcon.png" id="15_6p1ix"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e4g0l"]
size = Vector2(96, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1f8v"]
size = Vector2(96, 96)

[sub_resource type="Animation" id="Animation_ud57m"]
resource_name = "Camera_RESET"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7fqny"]
resource_name = "Camera_shake"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-60, 0), Vector2(60, 0), Vector2(-60, 0)]
}

[sub_resource type="Animation" id="Animation_qfvbw"]
resource_name = "Jump"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EncloseSPR:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20), Vector2(0, 0), Vector2(0, -30), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(2.5, 2.5), Vector2(3, 3), Vector2(2, 2), Vector2(3, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.764706), Color(1, 1, 1, 1), Color(1, 1, 1, 0.686275), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("JumpFX:pitch_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("JumpFX")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.61,
"start_offset": 0.0,
"stream": ExtResource("5_e45bu")
}, {
"end_offset": 0.46,
"start_offset": 0.0,
"stream": ExtResource("5_e45bu")
}],
"times": PackedFloat32Array(0, 0.3)
}
tracks/4/use_blend = true

[sub_resource type="Animation" id="Animation_11hxf"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_up8j3"]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(100, 100, 100, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_55nu1"]
resource_name = "disappear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(100, 100, 100, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_db3sm"]
_data = {
"Camera_RESET": SubResource("Animation_ud57m"),
"Camera_shake": SubResource("Animation_7fqny"),
"Jump": SubResource("Animation_qfvbw"),
"RESET": SubResource("Animation_11hxf"),
"appear": SubResource("Animation_up8j3"),
"disappear": SubResource("Animation_55nu1")
}

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_q8bae")
metadata/_edit_horizontal_guides_ = []

[node name="PlayerCollider" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Playercollision" type="CollisionShape2D" parent="PlayerCollider" groups=["collisionBox"]]
shape = SubResource("RectangleShape2D_e4g0l")

[node name="Player" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e4g0l")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 96)
collide_with_areas = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Left" type="Area2D" parent="AudioStreamPlayer2D"]
position = Vector2(-96, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AudioStreamPlayer2D/Left" groups=["collisionBox"]]
shape = SubResource("RectangleShape2D_h1f8v")

[node name="Sprite2D" type="Sprite2D" parent="AudioStreamPlayer2D/Left"]
visible = false
z_index = 6
scale = Vector2(3, 3)
texture = ExtResource("6_w27wk")

[node name="Right" type="Area2D" parent="AudioStreamPlayer2D"]
position = Vector2(96, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AudioStreamPlayer2D/Right" groups=["collisionBox"]]
shape = SubResource("RectangleShape2D_h1f8v")

[node name="Sprite2D" type="Sprite2D" parent="AudioStreamPlayer2D/Right"]
visible = false
z_index = 6
scale = Vector2(3, 3)
texture = ExtResource("6_w27wk")

[node name="Up" type="Area2D" parent="AudioStreamPlayer2D"]
position = Vector2(0, -96)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AudioStreamPlayer2D/Up" groups=["collisionBox"]]
shape = SubResource("RectangleShape2D_h1f8v")

[node name="Sprite2D" type="Sprite2D" parent="AudioStreamPlayer2D/Up"]
visible = false
z_index = 6
scale = Vector2(3, 3)
texture = ExtResource("6_w27wk")

[node name="Down" type="Area2D" parent="AudioStreamPlayer2D"]
position = Vector2(0, 96)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AudioStreamPlayer2D/Down"]
shape = SubResource("RectangleShape2D_h1f8v")

[node name="Sprite2D" type="Sprite2D" parent="AudioStreamPlayer2D/Down"]
visible = false
z_index = 6
scale = Vector2(3, 3)
texture = ExtResource("6_w27wk")

[node name="JumpFX" type="AudioStreamPlayer2D" parent="."]
pitch_scale = 2.0

[node name="EncloseSPR" type="Node2D" parent="."]

[node name="Shadow" parent="." instance=ExtResource("3_sjc8j")]
z_index = -2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_db3sm")
}

[node name="Left" type="Area2D" parent="."]
position = Vector2(-96, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left" groups=["collisionBox"]]
shape = SubResource("RectangleShape2D_h1f8v")

[node name="Right" type="Area2D" parent="."]
position = Vector2(96, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right" groups=["collisionBox"]]
shape = SubResource("RectangleShape2D_h1f8v")

[node name="Up" type="Area2D" parent="."]
position = Vector2(0, -96)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up" groups=["collisionBox"]]
shape = SubResource("RectangleShape2D_h1f8v")

[node name="Down" type="Area2D" parent="."]
position = Vector2(0, 96)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
shape = SubResource("RectangleShape2D_h1f8v")

[node name="ControllerIcon" parent="." instance=ExtResource("14_76q02")]
visible = false
position = Vector2(0, -96)
texture = ExtResource("15_6p1ix")
region_enabled = false

[connection signal="mouse_entered" from="Left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="Left" to="." method="_on_left_mouse_exited"]
[connection signal="mouse_entered" from="Right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="Right" to="." method="_on_right_mouse_exited"]
[connection signal="mouse_entered" from="Up" to="." method="_on_up_mouse_entered"]
[connection signal="mouse_exited" from="Up" to="." method="_on_up_mouse_exited"]
[connection signal="mouse_entered" from="Down" to="." method="_on_down_mouse_entered"]
[connection signal="mouse_exited" from="Down" to="." method="_on_down_mouse_exited"]
